--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ytdl-core": "^2.1.2"
   },
   "scripts": {
-    "stable": "node bot.js",
+    "stable": "node bot.js"
   },
   "repository": {
     "type": "git",
