--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/KnoxDevTeam/Lavender/issues"
   },
   "engines": {
-    "node": "12.16.3"
+    "node": "12.16.3",
+    "npm": "5.7.1"
   }
 }
