--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "lavender",
-  "version": "1.2.0",
-  "license": "GPL-3.0-or-later",
-  "description": "A JavaScript-Based Discord Bot Made to Increase your Workflow and Autonomy",
+  "name": "expressbot",
+  "version": "1.2.5",
+  "description": "A good and functional Discord music and moderation bot in node.js.",
   "main": "bot.js",
+  "scripts": {
+    "stable": "node bot.js"
+  },
+  "engines": {
+    "node": "12.16.3"
+  },
+  "auto-updater": {
+    "repo": "seenks1/seunghee-mod",
+    "branch": "master"
+  },
   "dependencies": {
     "dblapi.js": "^2.3.0",
     "discord.js": "^11.5.1",
@@ -16,19 +25,5 @@
     "soundcloud": "^3.3.0",
     "uws": "^99.0.0",
     "ytdl-core": "^2.1.2"
-  },
-  "scripts": {
-    "stable": "node bot.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KnoxDevTeam/Lavender.git"
-  },
-  "bugs": {
-    "url": "https://github.com/KnoxDevTeam/Lavender/issues"
-  },
-  "engines": {
-    "node": "12.16.3",
-    "npm": "5.7.1"
   }
 }
